# AgentFriendly

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/.astro/: settings.json
docs-site/.astro/astro/: content.d.ts
docs-site/src/styles/: custom.css
docs/adr/: ADR-001-languages.md  ADR-002-no-webmcp.md  ADR-003-x402-tollbit.md  ADR-004-sqlite-default.md  ADR-005-rfc9421-identity.md  ADR-006-independent-tool-versioning.md  ADR-007-middleware-first.md  ADR-008-proactive-markdown.md  README.md
docs/architecture/: 00-overview.md  01-detection-pipeline.md  02-discovery-layer.md  03-content-negotiation.md  04-access-control.md  05-monetization.md  06-privacy-pii.md  07-tool-registry.md  08-multi-tenancy.md  09-analytics.md  10-framework-adapters.md  11-debug-mode.md
docs/landscape/: 01-content-negotiation.md  02-llms-txt.md  03-robots-txt-ai.md  04-webmcp.md  05-webagents-md.md  06-agent-handshake-protocol.md  07-dark-visitors.md  08-cloudflare-markdown-agents.md  09-x402-monetization.md  10-tollbit.md  11-agent-identity-verification.md  12-firecrawl-jina.md  13-agentql-unbrowse.md
docs/overview/: simple-overview.md
docs/research/: 01-literature-review.md  02-resolved-questions.md  03-interaction-models.md
examples/express/: package.json
examples/express/src/: server.ts
examples/next/: middleware.ts  package.json
examples/next/src/app/: page.tsx
patches/: @astrojs__sitemap@3.7.1.patch
python_sdk/: LICENSE  pyproject.toml
python_sdk/agentfriendly/: __init__.py  config.py  middleware.py  types.py
python_sdk/agentfriendly/access/: __init__.py  policy_engine.py  rate_limiter.py
python_sdk/agentfriendly/adapters/: __init__.py  django.py  fastapi.py  flask.py
python_sdk/agentfriendly/content/: __init__.py  html_to_markdown.py  negotiator.py
python_sdk/agentfriendly/detection/: __init__.py  pipeline.py  signal_accept_header.py  signal_header_heuristics.py  signal_ua_database.py
python_sdk/agentfriendly/discovery/: __init__.py  generators.py  router.py
python_sdk/agentfriendly/monetization/: __init__.py  x402.py
python_sdk/agentfriendly/multitenancy/: __init__.py  token_issuer.py
python_sdk/agentfriendly/privacy/: __init__.py  masker.py  pii_patterns.py
python_sdk/tests/: test_access_policy.py  test_content.py  test_middleware.py  test_privacy.py
python_sdk/tests/detection/: test_signal_accept_header.py  test_signal_header_heuristics.py
(+31 files in other folders)
